# ksolver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  solver-lab-constraint-showcase.yaml  solver-lab-kwok-workloads.yaml  solver-lab-v2.yaml  solver-lab-workloads.yaml
.github/workflows/: ci.yml
.ksolver/pricing/: default.json  solver-lab-pricing.json
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
docs/superpowers/specs/: 2026-06-09-constraint-cost-attribution-design.md
ksolver/: Cargo.toml  Dockerfile  scenario-runner.yaml
ksolver/scripts/: run_important_scenarios.py
ksolver/src/: collector.rs  cpsat_rust.rs  explainability.rs  historical_usage.rs  lib.rs  main.rs  metrics.rs  model.rs  normalizer.rs  optimizer_input.rs  planner.rs  pricing.rs  server.rs  service.rs  state_cache.rs  verifier.rs
ksolver/static/: index.html
